--- a/tcbs/caffeine/culi-service/culi-service-develop.properties
+++ b/tcbs/caffeine/culi-service/culi-service-develop.properties
@@ -1,1 +1,27 @@
-welcome.message=Hello World
+# Spring Boot configuration
+spring:
+  datasource:
+    url: jdbc:timesten:client:TTC_SERVER=10.9.2.43;TTC_SERVER_DSN=FOHFT;TCP_PORT=53387;
+    username: FOHFT
+    password: FOHFT
+    driverClassName: com.timesten.jdbc.TimesTenDriver
+    hikari:
+      maximum-pool-size: 3
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.TimesTenDialect
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+  activemq:
+    broker-url: tcp://hft-machine:61616
+    user: karaf
+    password: karaf
+
+# Application configuration
+application:
+  input-endpoint: "activemq:queue:async.poolroom.channel"
+  whitelist-messages:
+    - 2C
